--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "direct-email-sender",
+  "name": "email-send-1",
   "version": "1.0.0",
-  "description": "A script to send emails directly using MX records and nodemailer",
+  "description": "made by wad",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
